--- a/azure-pipelines.acr.yml
+++ b/azure-pipelines.acr.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: "Ubuntu-16.04"
 
 variables:
-  imageName: "sample-go:$(build.buildId)"
+  imageName: "sample-go:latest"
 
 steps:
   - script: |
